[package]
name = "rust_keystore_decrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth-keystore = "0.5.0"
hex = "0.4.3"
hmac = "0.12.1"
pbkdf2 = "0.12.1"
sha3 = "0.10.8"
sha2 = "0.10.6"
serde_json = "1.0.64"
scrypt = "0.10.0"
digest = "0.10.7"
ctr = "0.9.2"
aes = "0.8.3"
